--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -20,7 +20,8 @@ $low-green: #7ae229;
 $medium-orange: #ffa800;
 $urgent-red: #ff3d00;
 $error-red: #ff001f;
-$error-muted: #ff001f;
+$error-red: #d50019;
+$error-muted: #d50019;
 
 /* element-colors */
 $label-blue: #0038ff;
